--- a/components/_style/mixin/theme.components.styl
+++ b/components/_style/mixin/theme.components.styl
@@ -215,6 +215,7 @@ detail-item-content-color = color-text-body
 detail-item-gap = v-gap-sm
 
 // icon
+icon-size-xxs = 16px
 icon-size-xs = 20px
 icon-size-sm = 24px
 icon-size-md = 32px
