--- a/theme.custom.styl
+++ b/theme.custom.styl
@@ -11,6 +11,7 @@ steps-text-color = color-text-minor
 steps-horizontal-icon-size = 15px
 
 // icon
+icon-size-xxs = 16px
 icon-size-xs = 20px
 icon-size-sm = 28px
 icon-size-md = 36px
