修复buttonprimary默认样式，升级全屏压屏关闭逻辑，升级timeline横向item最大宽度

--- a/theme.custom.styl
+++ b/theme.custom.styl
@@ -22,20 +22,20 @@ landscape-width = 286px
 
 // button
 // button
-button-primary-fill = linear-gradient(135deg, #FFBF6C 0%, #FF8B3A 100%);
+button-primary-fill = linear-gradient(135deg, #F6A232 0%, #EF7D00 100%);
 button-default-fill = color-bg-inverse
 button-disabled-fill = color-bg-disabled
 button-warning-fill = color-text-error
 
 button-primary-active-fill = linear-gradient(135deg, #F2841D 0%, #E75D00 100%);
-button-default-active-fill = color-bg-base
+button-default-active-fill = #F4F4F4
 button-warning-active-fill = #E9424F
 
 button-primary-plain-active-fill = #EAF2FE
 button-default-plain-active-fill = color-bg-base
 button-warning-plain-active-fill = #FAC3C6
 
-button-default-color = color-text-body
+button-default-color = #595959
 button-primary-color = #fff
 button-disabled-color = color-text-base-inverse
 button-warning-color = color-text-base-inverse
@@ -52,7 +52,7 @@ button-font-weight = font-weight-medium
 button-small-height = 20px
 button-small-font-size = font-caption-normal
 
-button-large-height = 48px
+button-large-height = 44px
 button-large-font-size = font-caption-large
 
 button-radius = radius-normal
